--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 Change log for java-dirq-test:
 
+???	???
+	* [lc] ported to dirq 1.5
+
 1.3	Wed Apr  1 2015
 	* [lc] first version recording changes...
 	* [lc] changed all the tests to use a temporary directory
