--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,9 @@
 Change log for java-dirq-test:
 
-???	???
-	* [lc] ported to dirq 1.5
+1.4	Tue Dec  1 2015
+	* [lc] ported to dirq 1.7
+	* [lc] major code cleanup
+	* [lc] now using checkstyle and findbugs
 
 1.3	Wed Apr  1 2015
 	* [lc] first version recording changes...
